--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.5",
+    "@uidotdev/usehooks": "^2.4.1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,8 +35,10 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-confetti": "^6.1.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
